[gd_scene load_steps=15 format=2]

[ext_resource path="res://message.png" type="Texture" id=1]
[ext_resource path="res://checkpoint_message.gd" type="Script" id=2]
[ext_resource path="res://button_play.png" type="Texture" id=3]
[ext_resource path="res://button_reject.png" type="Texture" id=4]
[ext_resource path="res://Bubblegum.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://TouchScreenButton_reject.gd" type="Script" id=6]
[ext_resource path="res://TouchScreenButton_play.gd" type="Script" id=7]

[sub_resource type="DynamicFont" id=1]
size = 60
outline_size = 5
outline_color = Color( 0.890196, 0.815686, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 40
outline_size = 5
outline_color = Color( 0.686275, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="RectangleShape2D" id=3]

[sub_resource type="Shader" id=4]
code = "shader_type canvas_item;

uniform float blur_amount : hint_range(0, 5);

void fragment() {
	COLOR = textureLod(SCREEN_TEXTURE, SCREEN_UV, blur_amount);
}"

[sub_resource type="ShaderMaterial" id=5]
shader = SubResource( 4 )
shader_param/blur_amount = 2.5

[sub_resource type="CubeMesh" id=6]

[sub_resource type="RectangleShape2D" id=7]

[node name="checkpoint_message" type="Sprite"]
scale = Vector2( 0.5, 0.5 )
z_index = 4096
texture = ExtResource( 1 )
script = ExtResource( 2 )

[node name="button_play" type="Sprite" parent="."]
position = Vector2( -175, 250 )
texture = ExtResource( 3 )

[node name="button_reject" type="Sprite" parent="."]
position = Vector2( 175, 250 )
texture = ExtResource( 4 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = -318.936
margin_top = -81.688
margin_right = 630.064
margin_bottom = 246.312
custom_fonts/normal_font = SubResource( 1 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
text = " Watch an advert to 
     return to your 
  latest checkpoint!"

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
margin_left = -245.722
margin_top = -303.739
margin_right = 582.278
margin_bottom = -213.739
custom_fonts/normal_font = SubResource( 2 )
text = " 
  Return to checkpoint"

[node name="TouchScreenButton_reject" type="TouchScreenButton" parent="."]
position = Vector2( 75, 150 )
scale = Vector2( 10, 10 )
shape = SubResource( 3 )
script = ExtResource( 6 )

[node name="blur_background" type="MeshInstance2D" parent="."]
material = SubResource( 5 )
scale = Vector2( 1000, 2000 )
z_index = -1
mesh = SubResource( 6 )

[node name="TouchScreenButton_play" type="TouchScreenButton" parent="."]
position = Vector2( -275, 150 )
scale = Vector2( 10, 10 )
shape = SubResource( 7 )
script = ExtResource( 7 )
[connection signal="pressed" from="TouchScreenButton_reject" to="TouchScreenButton_reject" method="_on_TouchScreenButton_reject_pressed"]
[connection signal="released" from="TouchScreenButton_reject" to="TouchScreenButton_reject" method="_on_TouchScreenButton_reject_released"]
[connection signal="pressed" from="TouchScreenButton_play" to="TouchScreenButton_play" method="_on_TouchScreenButton_play_pressed"]
[connection signal="released" from="TouchScreenButton_play" to="TouchScreenButton_play" method="_on_TouchScreenButton_play_released"]
